# CoreHttpServer

./: CMakeLists.txt  CoreHttpServer.pro  Docakerfile  Dockerfile  HTTP_Handler.cpp  HTTP_Handler.h  README.md  htmls.h  main.cpp  resources.qrc
